Fixing bug 264090. Setting properties on scriptable plugins isn't working. r+sr+a=brendan@mozilla.org